--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
@@ -15,7 +14,6 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 </head>
 <a href="#" id="backToTopBtn" title="Go to top">
     <i class="fas fa-arrow-up"></i>
@@ -47,7 +45,6 @@
                 <div class="details">
                     <!-- Typing text container -->
                     <p id="typing-text" style="line-height: 1.6; font-weight: 400;"></p>
-
                     <!-- Buttons shown after typing -->
                 </div>
                 <script>
@@ -59,7 +56,6 @@
                             style: "font-size: 20px; color: white;"
                         }
                     ];
-
                     const typingElement = document.getElementById("typing-text");
                     const btns = document.getElementById("after-type-buttons");
                     let lineIndex = 0;
@@ -100,7 +96,7 @@
                 </script>
 
                 <div class="btns">
-                    <a href="https://drive.google.com/file/d/1R9irB0j0kjqRYjLSoYbLubamfXXk88zX/view?usp=drive_link"
+                    <a href="https://drive.google.com/file/d/1p16KLeqTEMtPXl-gJi7gObl9kpcJXr5E/view?usp=drive_link"
                         target="_blank" class="btn">Resume</a>
                     <a href="#contact" class="btn">Contact Me</a>
                 </div>
@@ -182,19 +178,39 @@
             </div>
         </div>
     </section>
- <section id="skills" class="skills">
+    <section id="skills" class="skills">
         <h2>Skills</h2>
         <div class="skill-list ">
-             <div class="skill"><i class="fab fa-html5" style="color:#e34c26;"></i><p>HTML5</p></div>
-        <div class="skill"><i class="fab fa-css3-alt" style="color:#264de4;"></i><p>CSS3</p></div>
-        <div class="skill"><i class="fab fa-js-square" style="color:#f0db4f;"></i><p>JavaScript</p></div>
-        <div class="skill"><i class="fab fa-react" style="color:#61dbfb;"></i><p>React</p></div>
-        <div class="skill"><i class="fab fa-node" style="color:#3c873a;"></i><p>Node.js</p></div>
-        <div class="skill"><i class="fas fa-database" style="color:#f29111;"></i><p>MySQL</p></div>
-        <div class="skill"><i class="fab fa-python" style="color:#306998;"></i><p>Python</p></div>
-        <div class="skill"><i class="fab fa-aws" style="color:#ff9900;"></i><p>AWS</p></div>
-        <div class="skill"><i class="fas fa-server" style="color:#808080;"></i><p>VMware</p></div>
-        <div class="skill"><i class="fas fa-network-wired" style="color:#556B2F;"></i><p>Networking</p></div>
+            <div class="skill"><i class="fab fa-html5" style="color:#e34c26;"></i>
+                <p>HTML5</p>
+            </div>
+            <div class="skill"><i class="fab fa-css3-alt" style="color:#264de4;"></i>
+                <p>CSS3</p>
+            </div>
+            <div class="skill"><i class="fab fa-js-square" style="color:#f0db4f;"></i>
+                <p>JavaScript</p>
+            </div>
+            <div class="skill"><i class="fab fa-react" style="color:#61dbfb;"></i>
+                <p>React</p>
+            </div>
+            <div class="skill"><i class="fab fa-node" style="color:#3c873a;"></i>
+                <p>Node.js</p>
+            </div>
+            <div class="skill"><i class="fas fa-database" style="color:#f29111;"></i>
+                <p>MySQL</p>
+            </div>
+            <div class="skill"><i class="fab fa-python" style="color:#306998;"></i>
+                <p>Python</p>
+            </div>
+            <div class="skill"><i class="fab fa-aws" style="color:#ff9900;"></i>
+                <p>AWS</p>
+            </div>
+            <div class="skill"><i class="fas fa-server" style="color:#808080;"></i>
+                <p>VMware</p>
+            </div>
+            <div class="skill"><i class="fas fa-network-wired" style="color:#556B2F;"></i>
+                <p>Networking</p>
+            </div>
         </div>
     </section>
     <section id="experience" class="experience">
@@ -236,7 +252,6 @@
                         </p>
                     </div>
                 </div>
-
                 <div class="list3">
                     <div class="objects">
                         <div class="obj" data-title="Full Stack Developer" data-type="Al Adil Supermarket, Dubai">
@@ -341,9 +356,6 @@
                     </a>
                 </div>
                 <br>
-
-
-
                 <!-- -----------------------------------contact from---------------------- -->
                 <div class="text" id="contactme">
                     <p><i class="fas fa-envelope"></i> nailwalmohit28@gmail.com</p>
@@ -359,7 +371,7 @@
 
     <footer>
         <div class="main-footer">
-             <p style="text-align:center;">© 2025 Mohit Nailwal. All rights reserved.</p>
+            <p style="text-align:center;">© 2025 Mohit Nailwal. All rights reserved.</p>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/nailwalmohit/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/positve_electron/" target="_blank"><i
@@ -407,12 +419,11 @@
             window.scrollTo({ top: 0, behavior: "smooth" });
         });
         // ----blog page
-         document.querySelector('a[href="#blogs"]').addEventListener('click', function (e) {
+        document.querySelector('a[href="#blogs"]').addEventListener('click', function (e) {
             e.preventDefault();
             window.location.href = 'blogs.html'; // Redirects to blog page
         });
     </script>
 </body>
-
 
 </html>
