--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="Sutharsan">
     <meta name="keywords" content="Portfolio, Web developer, Engineer">
     <title>Mohit Tech Portfolio</title>
+       <!-- Add favicon -->
+    <link rel="icon" type="image/x-icon" href="./istockphoto-470301340-612x612.jpg">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
