--- a/index.html
+++ b/index.html
@@ -182,38 +182,104 @@
     </section>
     <section id="skills" class="skills">
         <h2>Skills</h2>
-        <div class="skill-list ">
-            <div class="skill"><i class="fab fa-html5" style="color:#e34c26;"></i>
-                <p>HTML5</p>
-            </div>
-            <div class="skill"><i class="fab fa-css3-alt" style="color:#264de4;"></i>
-                <p>CSS3</p>
-            </div>
-            <div class="skill"><i class="fab fa-js-square" style="color:#f0db4f;"></i>
-                <p>JavaScript</p>
-            </div>
-            <div class="skill"><i class="fab fa-react" style="color:#61dbfb;"></i>
-                <p>React</p>
-            </div>
-            <div class="skill"><i class="fab fa-node" style="color:#3c873a;"></i>
-                <p>Node.js</p>
-            </div>
-            <div class="skill"><i class="fas fa-database" style="color:#f29111;"></i>
-                <p>MySQL</p>
-            </div>
-            <div class="skill"><i class="fab fa-python" style="color:#306998;"></i>
-                <p>Python</p>
-            </div>
-            <div class="skill"><i class="fab fa-aws" style="color:#ff9900;"></i>
-                <p>AWS</p>
-            </div>
-            <div class="skill"><i class="fas fa-server" style="color:#808080;"></i>
-                <p>VMware</p>
-            </div>
-            <div class="skill"><i class="fas fa-network-wired" style="color:#556B2F;"></i>
-                <p>Networking</p>
-            </div>
-        </div>
+       <div class="skill-list">
+    <div class="skill"><i class="fa-brands fa-html5" style="color:#e34c26;"></i>
+        <p>HTML5</p>
+    </div>
+   <div class="skill"><i class="fa-brands fa-wordpress" style="color:#21759b;"></i>
+        <p>WordPress</p>
+    </div>
+    <div class="skill"><i class="fa-brands fa-php" style="color:#777bb4;"></i>
+        <p>PHP</p>
+    </div>
+    <div class="skill"><i class="fab fa-aws" style="color:#ff9900;"></i>
+        <p>AWS</p>
+    </div>
+    <div class="skill"><i class="fas fa-server" style="color:#808080;"></i>
+        <p>VMware</p>
+    </div>
+    <div class="skill"><i class="fas fa-network-wired" style="color:#556B2F;"></i>
+        <p>Networking</p>
+    </div>
+    <div class="skill"><i class="fa-brands fa-bootstrap" style="color:#563d7c;"></i>
+        <p>Bootstrap</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-wind" style="color:#06b6d4;"></i>
+        <p>Tailwind CSS</p>
+    </div>
+    <div class="skill"><i class="fa-brands fa-git-alt" style="color:#f05033;"></i>
+        <p>Git</p>
+    </div>
+    <div class="skill"><i class="fa-brands fa-github" style="color:#181717;"></i>
+        <p>GitHub</p>
+    </div>
+     <div class="skill"><i class="fab fa-css3-alt" style="color:#264de4;"></i>
+        <p>CSS3</p>
+    </div>
+    <div class="skill"><i class="fab fa-js-square" style="color:#f0db4f;"></i>
+        <p>JavaScript</p>
+    </div>
+    <div class="skill"><i class="fab fa-react" style="color:#61dbfb;"></i>
+        <p>React</p>
+    </div>
+    <div class="skill"><i class="fab fa-node" style="color:#3c873a;"></i>
+        <p>Node.js</p>
+    </div>
+    <div class="skill"><i class="fas fa-database" style="color:#f29111;"></i>
+        <p>MySQL</p>
+    </div>
+    <div class="skill"><i class="fab fa-python" style="color:#306998;"></i>
+        <p>Python</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-code" style="color:#d4a017;"></i>
+        <p>C++</p>
+    </div>
+    <div class="skill"><i class="fa-brands fa-docker" style="color:#0db7ed;"></i>
+        <p>Docker</p>
+    </div>
+    <div class="skill"><i class="fa-brands fa-windows" style="color:#0078d6;"></i>
+        <p>Windows Server</p>
+    </div>
+    <div class="skill"><i class="fa-brands fa-linux" style="color:#fcc624;"></i>
+        <p>Linux Server</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-shield-alt" style="color:#ff4500;"></i>
+        <p>Firewalls</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-lock" style="color:#4682b4;"></i>
+        <p>VPN</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-print" style="color:#696969;"></i>
+        <p>Printers</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-video" style="color:#800080;"></i>
+        <p>CCTV</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-mobile-alt" style="color:#20b2aa;"></i>
+        <p>Handheld Devices</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-credit-card" style="color:#2e8b57;"></i>
+        <p>Card Machines</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-fingerprint" style="color:#9932cc;"></i>
+        <p>Biometric Devices</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-puzzle-piece" style="color:#ffa500;"></i>
+        <p>Problem Solving</p>
+    </div>
+    <div class="skill"><i class="fa-brands fa-figma" style="color:#f24e1e;"></i>
+        <p>Figma</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-exchange-alt" style="color:#008080;"></i>
+        <p>REST APIs</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-rocket" style="color:#ff6200;"></i>
+        <p>Postman</p>
+    </div>
+    <div class="skill"><i class="fa-solid fa-database" style="color:#4db33d;"></i>
+        <p>MongoDB</p>
+    </div>
+</div>
     </section>
     <section id="experience" class="experience">
         <div class="experience">
