--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <i class="fas fa-arrow-up"></i>
 </a>
 
+
+
 <body>
     <div class="navbar">
         <div class="container">
@@ -30,6 +32,10 @@
 
             <!-- Hamburger icon for mobile -->
             <div id="hamburger"><i class="fas fa-bars"></i></div>
+
+
+
+
 
             <ul id="nav-links">
                 <li><a href="#" class="active">Home</a></li>
@@ -295,11 +301,16 @@
                     </div>
                     <div class="info">
                         <h4>IT Support Engineer – AL ADIL TRADING, Dubai, UAE</h4>
-                        <p>Support and manage Retail ERP systems Microsoft Dynamics, GoFrugal, or custom solutions.
-                            Handle
-                            virtualized environments using VMware or Hyper-V, TCP/IP, VLANs, firewalls, and VPNs.
-                            • Maintain and support POS systems used in retail stores and AWS, Azure, or Google Cloud.
-                            • Ensure smooth operation of servers, networks, and hardware across all locations.</p>
+                      
+   <ul class="skill-bullets">
+    <li>Support and manage Retail ERP systems, including Microsoft Dynamics GP, Business Central, ZOHO ERP, GoFrugal, or custom solutions.</li>
+    <li>Handle virtualized environments using VMware or Hyper-V.</li>
+    <li>Manage network configurations, including TCP/IP, VLANs, firewalls, and VPNs.</li>
+    <li>Maintain and support POS systems used in retail stores.</li>
+    <li>Support cloud platforms, including AWS, Azure, or Google Cloud.</li>
+    <li>Ensure smooth operation of servers, networks, and hardware across all locations.</li>
+</ul>
+
                     </div>
                 </div>
                 <div class="list2">
@@ -310,14 +321,14 @@
                     </div>
                     <div class="info">
                         <h4>FULL STACK DEVELOPER - DNS GROUP, Delhi, India</h4>
-                        <p>Implemented responsive UI/UX designs & Functionallity. Deployed applications to cloud
-                            platforms.
-                            Developed RESTful APIs. Troubleshot and debugged complex issues in both client and server
-                            side.
-                            • Design and maintain relational databases using SQL for efficient data storage, retrieval,
-                            optimization.
-                            • Collaborated with cross-functional teams of designers, QA engineers, and product managers.
-                        </p>
+                        <ul class="skill-bullets">
+    <li>Implemented responsive UI/UX designs & Functionality.</li>
+    <li>Deployed applications to cloud platforms.</li>
+    <li>Developed RESTful APIs.</li>
+    <li>Troubleshot and debugged complex issues in both client and server side.</li>
+    <li>Design and maintain relational databases using SQL for efficient data storage, retrieval, optimization.</li>
+    <li>Collaborated with cross-functional teams of designers, QA engineers, and product managers.</li>
+</ul>
                     </div>
                 </div>
                 <div class="list3">
@@ -328,12 +339,13 @@
                     </div>
                     <div class="info">
                         <h4>IT Support Admin – TRANSGUARD GROUP LLC, Dubai, UAE</h4>
-                        <p>Provided technical support and troubleshooting for hardware, software, and network issues.
-                            • Maintained and updated IT infrastructure, ensuring optimal system performance and
-                            security.
-                            • Performed routine system and network monitoring, backups, and updates.
-                            • Collaborated with vendors and other departments to resolve complex IT issues efficiently.
-                            • Managed user accounts, permissions, and access rights through Active Directory.</p>
+                        <ul class="skill-bullets">
+    <li>Provided technical support and troubleshooting for hardware, software, and network issues.</li>
+    <li>Maintained and updated IT infrastructure, ensuring optimal system performance and security.</li>
+    <li>Performed routine system and network monitoring, backups, and updates.</li>
+    <li>Collaborated with vendors and other departments to resolve complex IT issues efficiently.</li>
+    <li>Managed user accounts, permissions, and access rights through Active Directory.</li>
+</ul>
                     </div>
                 </div>
 
@@ -345,15 +357,12 @@
                     </div>
                     <div class="info">
                         <h4>Full Stack Developer – CREATECH SOFTWARE PVT. LTD, Delhi, India</h4>
-                        <p>Employment Assistance for Ex- Servicemen Officers for DGR (Ministry of Defence) Indian Army.
-                            Maintaining their software on weekly basis & update which is provided by DGR.
-                            • Pharmaceutical Software solution for Army Hospital to manage and monitor inventory stocks
-                            efficiently.
-                            This system ensures that all pharmacy stock levels are tracked in real-time and provides
-                            automated alerts
-                            when stock quantities fall below predefined thresholds, improving inventory control and
-                            preventing stock
-                            outs.</p>
+                        <ul class="skill-bullets">
+    <li>Employment Assistance for Ex-Servicemen Officers for DGR (Ministry of Defence) Indian Army.</li>
+    <li>Maintaining their software on weekly basis & update which is provided by DGR.</li>
+    <li>Pharmaceutical Software solution for Army Hospital to manage and monitor inventory stocks efficiently.</li>
+    <li>This system ensures that all pharmacy stock levels are tracked in real-time and provides automated alerts when stock quantities fall below predefined thresholds, improving inventory control and preventing stock outs.</li>
+</ul>
                     </div>
                 </div>
             </div>
