--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal Portfollio of Sutharsan">
-    <meta name="author" content="Sutharsan">
-    <meta name="keywords" content="Portfolio, Web developer, Engineer">
+    <meta name="description" content="Personal Portfollio of mohit">
+    <meta name="author" content="mohit">
+    <meta name="keywords" content="Portfolio, Developer, Engineer">
     <title>Mohit Tech Portfolio</title>
-       <!-- Add favicon -->
+    <!-- Add favicon -->
     <link rel="icon" type="image/x-icon" href="./istockphoto-470301340-612x612.jpg">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -26,6 +26,11 @@
             <div class="logo">
                 <a href="#" target="_blank"><strong>PORTFOLIO</strong></a>
             </div>
+            <button class="dark-mode-toggle" aria-label="Toggle dark mode">
+                <i class="fas fa-moon moon-icon"></i>
+                 <i class="fa-solid fa-circle-half-stroke"></i>
+
+            </button>
             <!-- Hamburger icon for mobile -->
             <div id="hamburger"><i class="fas fa-bars"></i></div>
             <ul id="nav-links">
@@ -179,104 +184,104 @@
     </section>
     <section id="skills" class="skills">
         <h2>Skills</h2>
-       <div class="skill-list">
-    <div class="skill"><i class="fa-brands fa-html5" style="color:#e34c26;"></i>
-        <p>HTML5</p>
-    </div>
-   <div class="skill"><i class="fa-brands fa-wordpress" style="color:#21759b;"></i>
-        <p>WordPress</p>
-    </div>
-    <div class="skill"><i class="fa-brands fa-php" style="color:#777bb4;"></i>
-        <p>PHP</p>
-    </div>
-    <div class="skill"><i class="fab fa-aws" style="color:#ff9900;"></i>
-        <p>AWS</p>
-    </div>
-    <div class="skill"><i class="fas fa-server" style="color:#808080;"></i>
-        <p>VMware</p>
-    </div>
-    <div class="skill"><i class="fas fa-network-wired" style="color:#556B2F;"></i>
-        <p>Networking</p>
-    </div>
-    <div class="skill"><i class="fa-brands fa-bootstrap" style="color:#563d7c;"></i>
-        <p>Bootstrap</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-wind" style="color:#06b6d4;"></i>
-        <p>Tailwind CSS</p>
-    </div>
-    <div class="skill"><i class="fa-brands fa-git-alt" style="color:#f05033;"></i>
-        <p>Git</p>
-    </div>
-    <div class="skill"><i class="fa-brands fa-github" style="color:#181717;"></i>
-        <p>GitHub</p>
-    </div>
-     <div class="skill"><i class="fab fa-css3-alt" style="color:#264de4;"></i>
-        <p>CSS3</p>
-    </div>
-    <div class="skill"><i class="fab fa-js-square" style="color:#f0db4f;"></i>
-        <p>JavaScript</p>
-    </div>
-    <div class="skill"><i class="fab fa-react" style="color:#61dbfb;"></i>
-        <p>React</p>
-    </div>
-    <div class="skill"><i class="fab fa-node" style="color:#3c873a;"></i>
-        <p>Node.js</p>
-    </div>
-    <div class="skill"><i class="fas fa-database" style="color:#f29111;"></i>
-        <p>MySQL</p>
-    </div>
-    <div class="skill"><i class="fab fa-python" style="color:#306998;"></i>
-        <p>Python</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-code" style="color:#d4a017;"></i>
-        <p>C++</p>
-    </div>
-    <div class="skill"><i class="fa-brands fa-docker" style="color:#0db7ed;"></i>
-        <p>Docker</p>
-    </div>
-    <div class="skill"><i class="fa-brands fa-windows" style="color:#0078d6;"></i>
-        <p>Windows Server</p>
-    </div>
-    <div class="skill"><i class="fa-brands fa-linux" style="color:#fcc624;"></i>
-        <p>Linux Server</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-shield-alt" style="color:#ff4500;"></i>
-        <p>Firewalls</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-lock" style="color:#4682b4;"></i>
-        <p>VPN</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-print" style="color:#696969;"></i>
-        <p>Printers</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-video" style="color:#800080;"></i>
-        <p>CCTV</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-mobile-alt" style="color:#20b2aa;"></i>
-        <p>Handheld Devices</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-credit-card" style="color:#2e8b57;"></i>
-        <p>Card Machines</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-fingerprint" style="color:#9932cc;"></i>
-        <p>Biometric Devices</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-puzzle-piece" style="color:#ffa500;"></i>
-        <p>Problem Solving</p>
-    </div>
-    <div class="skill"><i class="fa-brands fa-figma" style="color:#f24e1e;"></i>
-        <p>Figma</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-exchange-alt" style="color:#008080;"></i>
-        <p>REST APIs</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-rocket" style="color:#ff6200;"></i>
-        <p>Postman</p>
-    </div>
-    <div class="skill"><i class="fa-solid fa-database" style="color:#4db33d;"></i>
-        <p>MongoDB</p>
-    </div>
-</div>
+        <div class="skill-list">
+            <div class="skill"><i class="fa-brands fa-html5" style="color:#e34c26;"></i>
+                <p>HTML5</p>
+            </div>
+            <div class="skill"><i class="fa-brands fa-wordpress" style="color:#21759b;"></i>
+                <p>WordPress</p>
+            </div>
+            <div class="skill"><i class="fa-brands fa-php" style="color:#777bb4;"></i>
+                <p>PHP</p>
+            </div>
+            <div class="skill"><i class="fab fa-aws" style="color:#ff9900;"></i>
+                <p>AWS</p>
+            </div>
+            <div class="skill"><i class="fas fa-server" style="color:#808080;"></i>
+                <p>VMware</p>
+            </div>
+            <div class="skill"><i class="fas fa-network-wired" style="color:#556B2F;"></i>
+                <p>Networking</p>
+            </div>
+            <div class="skill"><i class="fa-brands fa-bootstrap" style="color:#563d7c;"></i>
+                <p>Bootstrap</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-wind" style="color:#06b6d4;"></i>
+                <p>Tailwind CSS</p>
+            </div>
+            <div class="skill"><i class="fa-brands fa-git-alt" style="color:#f05033;"></i>
+                <p>Git</p>
+            </div>
+            <div class="skill"><i class="fa-brands fa-github" style="color:#181717;"></i>
+                <p>GitHub</p>
+            </div>
+            <div class="skill"><i class="fab fa-css3-alt" style="color:#264de4;"></i>
+                <p>CSS3</p>
+            </div>
+            <div class="skill"><i class="fab fa-js-square" style="color:#f0db4f;"></i>
+                <p>JavaScript</p>
+            </div>
+            <div class="skill"><i class="fab fa-react" style="color:#61dbfb;"></i>
+                <p>React</p>
+            </div>
+            <div class="skill"><i class="fab fa-node" style="color:#3c873a;"></i>
+                <p>Node.js</p>
+            </div>
+            <div class="skill"><i class="fas fa-database" style="color:#f29111;"></i>
+                <p>MySQL</p>
+            </div>
+            <div class="skill"><i class="fab fa-python" style="color:#306998;"></i>
+                <p>Python</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-code" style="color:#d4a017;"></i>
+                <p>C++</p>
+            </div>
+            <div class="skill"><i class="fa-brands fa-docker" style="color:#0db7ed;"></i>
+                <p>Docker</p>
+            </div>
+            <div class="skill"><i class="fa-brands fa-windows" style="color:#0078d6;"></i>
+                <p>Windows Server</p>
+            </div>
+            <div class="skill"><i class="fa-brands fa-linux" style="color:#fcc624;"></i>
+                <p>Linux Server</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-shield-alt" style="color:#ff4500;"></i>
+                <p>Firewalls</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-lock" style="color:#4682b4;"></i>
+                <p>VPN</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-print" style="color:#696969;"></i>
+                <p>Printers</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-video" style="color:#800080;"></i>
+                <p>CCTV</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-mobile-alt" style="color:#20b2aa;"></i>
+                <p>Handheld Devices</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-credit-card" style="color:#2e8b57;"></i>
+                <p>Card Machines</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-fingerprint" style="color:#9932cc;"></i>
+                <p>Biometric Devices</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-puzzle-piece" style="color:#ffa500;"></i>
+                <p>Problem Solving</p>
+            </div>
+            <div class="skill"><i class="fa-brands fa-figma" style="color:#f24e1e;"></i>
+                <p>Figma</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-exchange-alt" style="color:#008080;"></i>
+                <p>REST APIs</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-rocket" style="color:#ff6200;"></i>
+                <p>Postman</p>
+            </div>
+            <div class="skill"><i class="fa-solid fa-database" style="color:#4db33d;"></i>
+                <p>MongoDB</p>
+            </div>
+        </div>
     </section>
     <section id="experience" class="experience">
         <div class="experience">
@@ -292,15 +297,16 @@
                     </div>
                     <div class="info">
                         <h4>IT Support Engineer – AL ADIL TRADING, Dubai, UAE</h4>
-                      
-   <ul class="skill-bullets">
-    <li>Support and manage Retail ERP systems, including Microsoft Dynamics GP, Business Central, ZOHO ERP, GoFrugal, or custom solutions.</li>
-    <li>Handle virtualized environments using VMware or Hyper-V.</li>
-    <li>Manage network configurations, including TCP/IP, VLANs, firewalls, and VPNs.</li>
-    <li>Maintain and support POS systems used in retail stores.</li>
-    <li>Support cloud platforms, including AWS, Azure, or Google Cloud.</li>
-    <li>Ensure smooth operation of servers, networks, and hardware across all locations.</li>
-</ul>
+
+                        <ul class="skill-bullets">
+                            <li>Support and manage Retail ERP systems, including Microsoft Dynamics GP, Business
+                                Central, ZOHO ERP, GoFrugal, or custom solutions.</li>
+                            <li>Handle virtualized environments using VMware or Hyper-V.</li>
+                            <li>Manage network configurations, including TCP/IP, VLANs, firewalls, and VPNs.</li>
+                            <li>Maintain and support POS systems used in retail stores.</li>
+                            <li>Support cloud platforms, including AWS, Azure, or Google Cloud.</li>
+                            <li>Ensure smooth operation of servers, networks, and hardware across all locations.</li>
+                        </ul>
 
                     </div>
                 </div>
@@ -313,13 +319,15 @@
                     <div class="info">
                         <h4>FULL STACK DEVELOPER - DNS GROUP, Delhi, India</h4>
                         <ul class="skill-bullets">
-    <li>Implemented responsive UI/UX designs & Functionality.</li>
-    <li>Deployed applications to cloud platforms.</li>
-    <li>Developed RESTful APIs.</li>
-    <li>Troubleshot and debugged complex issues in both client and server side.</li>
-    <li>Design and maintain relational databases using SQL for efficient data storage, retrieval, optimization.</li>
-    <li>Collaborated with cross-functional teams of designers, QA engineers, and product managers.</li>
-</ul>
+                            <li>Implemented responsive UI/UX designs & Functionality.</li>
+                            <li>Deployed applications to cloud platforms.</li>
+                            <li>Developed RESTful APIs.</li>
+                            <li>Troubleshot and debugged complex issues in both client and server side.</li>
+                            <li>Design and maintain relational databases using SQL for efficient data storage,
+                                retrieval, optimization.</li>
+                            <li>Collaborated with cross-functional teams of designers, QA engineers, and product
+                                managers.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="list3">
@@ -331,12 +339,15 @@
                     <div class="info">
                         <h4>IT Support Admin – TRANSGUARD GROUP LLC, Dubai, UAE</h4>
                         <ul class="skill-bullets">
-    <li>Provided technical support and troubleshooting for hardware, software, and network issues.</li>
-    <li>Maintained and updated IT infrastructure, ensuring optimal system performance and security.</li>
-    <li>Performed routine system and network monitoring, backups, and updates.</li>
-    <li>Collaborated with vendors and other departments to resolve complex IT issues efficiently.</li>
-    <li>Managed user accounts, permissions, and access rights through Active Directory.</li>
-</ul>
+                            <li>Provided technical support and troubleshooting for hardware, software, and network
+                                issues.</li>
+                            <li>Maintained and updated IT infrastructure, ensuring optimal system performance and
+                                security.</li>
+                            <li>Performed routine system and network monitoring, backups, and updates.</li>
+                            <li>Collaborated with vendors and other departments to resolve complex IT issues
+                                efficiently.</li>
+                            <li>Managed user accounts, permissions, and access rights through Active Directory.</li>
+                        </ul>
                     </div>
                 </div>
 
@@ -349,11 +360,15 @@
                     <div class="info">
                         <h4>Full Stack Developer – CREATECH SOFTWARE PVT. LTD, Delhi, India</h4>
                         <ul class="skill-bullets">
-    <li>Employment Assistance for Ex-Servicemen Officers for DGR (Ministry of Defence) Indian Army.</li>
-    <li>Maintaining their software on weekly basis & update which is provided by DGR.</li>
-    <li>Pharmaceutical Software solution for Army Hospital to manage and monitor inventory stocks efficiently.</li>
-    <li>This system ensures that all pharmacy stock levels are tracked in real-time and provides automated alerts when stock quantities fall below predefined thresholds, improving inventory control and preventing stock outs.</li>
-</ul>
+                            <li>Employment Assistance for Ex-Servicemen Officers for DGR (Ministry of Defence) Indian
+                                Army.</li>
+                            <li>Maintaining their software on weekly basis & update which is provided by DGR.</li>
+                            <li>Pharmaceutical Software solution for Army Hospital to manage and monitor inventory
+                                stocks efficiently.</li>
+                            <li>This system ensures that all pharmacy stock levels are tracked in real-time and provides
+                                automated alerts when stock quantities fall below predefined thresholds, improving
+                                inventory control and preventing stock outs.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -424,7 +439,7 @@
                     </a>
                 </div>
                 <br>
-                <!-- -----------------------------------contact from---------------------- -->
+                <!-- -----------------------------------contact from--------------------------------- -->
                 <div class="text" id="contactme">
                     <p><i class="fas fa-envelope"></i> nailwalmohit28@gmail.com</p>
                     <div class="location">
@@ -451,8 +466,6 @@
             </div>
         </div>
     </footer>
-
-
     <script>
         // script for automate text writing------
         const hamburger = document.getElementById('hamburger');
@@ -491,6 +504,24 @@
             e.preventDefault();
             window.location.href = 'blogs.html'; // Redirects to blog page
         });
+
+        //script for dark mode
+        // Dark mode toggle
+  document.addEventListener('DOMContentLoaded', () => {
+    const toggleButton = document.querySelector('.dark-mode-toggle');
+    const html = document.documentElement;
+
+    // Check for saved theme preference or default to light
+    const savedTheme = localStorage.getItem('theme') || 'light';
+    html.setAttribute('data-theme', savedTheme);
+
+    toggleButton.addEventListener('click', () => {
+      const currentTheme = html.getAttribute('data-theme');
+      const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+      html.setAttribute('data-theme', newTheme);
+      localStorage.setItem('theme', newTheme);
+    });
+  }); 
     </script>
 </body>
 
