--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <a href="#" id="backToTopBtn" title="Go to top">
     <i class="fas fa-arrow-up"></i>
 </a>
+
 <body>
     <div class="navbar">
         <div class="container">
@@ -28,7 +29,7 @@
             </div>
             <button class="dark-mode-toggle" aria-label="Toggle dark mode">
                 <i class="fas fa-moon moon-icon"></i>
-                 <i class="fa-solid fa-circle-half-stroke"></i>
+                <i class="fa-solid fa-circle-half-stroke"></i>
 
             </button>
             <!-- Hamburger icon for mobile -->
@@ -300,12 +301,15 @@
 
                         <ul class="skill-bullets">
                             <li>Support and manage Retail ERP systems, including Microsoft Dynamics GP, Business
-                                Central, ZOHO ERP, GoFrugal, or custom solutions.</li>
-                            <li>Handle virtualized environments using VMware or Hyper-V.</li>
-                            <li>Manage network configurations, including TCP/IP, VLANs, firewalls, and VPNs.</li>
-                            <li>Maintain and support POS systems used in retail stores.</li>
-                            <li>Support cloud platforms, including AWS, Azure, or Google Cloud.</li>
-                            <li>Ensure smooth operation of servers, networks, and hardware across all locations.</li>
+                                Central, Zoho ERP, GoFrugal, and custom solutions.</li>
+                            <li>Administer virtualized environments using VMware or Hyper-V.</li>
+                            <li>Configure and manage network settings, including TCP/IP, VLANs, firewalls, and VPNs.
+                            </li>
+                            <li>Maintain and support Point of Sale (POS) systems for retail operations.</li>
+                            <li>Support cloud platforms such as AWS, Azure, and Google Cloud.</li>
+                            <li>Ensure seamless operation of servers, networks, and hardware across all locations.</li>
+                            <li>Conduct stock evaluation and inventory counting for efficient stock management.</li>
+                            <li>Oversee comprehensive inventory management for all stock categories.</li>
                         </ul>
 
                     </div>
@@ -507,21 +511,21 @@
 
         //script for dark mode
         // Dark mode toggle
-  document.addEventListener('DOMContentLoaded', () => {
-    const toggleButton = document.querySelector('.dark-mode-toggle');
-    const html = document.documentElement;
+        document.addEventListener('DOMContentLoaded', () => {
+            const toggleButton = document.querySelector('.dark-mode-toggle');
+            const html = document.documentElement;
 
-    // Check for saved theme preference or default to light
-    const savedTheme = localStorage.getItem('theme') || 'light';
-    html.setAttribute('data-theme', savedTheme);
+            // Check for saved theme preference or default to light
+            const savedTheme = localStorage.getItem('theme') || 'light';
+            html.setAttribute('data-theme', savedTheme);
 
-    toggleButton.addEventListener('click', () => {
-      const currentTheme = html.getAttribute('data-theme');
-      const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-      html.setAttribute('data-theme', newTheme);
-      localStorage.setItem('theme', newTheme);
-    });
-  }); 
+            toggleButton.addEventListener('click', () => {
+                const currentTheme = html.getAttribute('data-theme');
+                const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+                html.setAttribute('data-theme', newTheme);
+                localStorage.setItem('theme', newTheme);
+            });
+        }); 
     </script>
 </body>
 
