--- a/index.html
+++ b/index.html
@@ -300,17 +300,17 @@
                         <h4>IT Support Engineer – AL ADIL TRADING, Dubai, UAE</h4>
 
                         <ul class="skill-bullets">
-                            <li>Support and manage Retail ERP systems, including Microsoft Dynamics GP, Business
-                                Central, Zoho ERP, GoFrugal, and custom solutions.</li>
-                            <li>Administer virtualized environments using VMware or Hyper-V.</li>
-                            <li>Configure and manage network settings, including TCP/IP, VLANs, firewalls, and VPNs.
-                            </li>
-                            <li>Maintain and support Point of Sale (POS) systems for retail operations.</li>
-                            <li>Support cloud platforms such as AWS, Azure, and Google Cloud.</li>
-                            <li>Ensure seamless operation of servers, networks, and hardware across all locations.</li>
-                            <li>Conduct stock evaluation and inventory counting for efficient stock management.</li>
-                            <li>Oversee comprehensive inventory management for all stock categories.</li>
-                        </ul>
+    <li>Support and manage Retail ERP systems, including Microsoft Dynamics GP, Business Central, Zoho ERP, GoFrugal, and custom solutions.</li>
+    <li>Administer virtualized environments using VMware or Hyper-V.</li>
+    <li>Configure and manage network settings, including TCP/IP, VLANs, firewalls, and VPNs.</li>
+    <li>Maintain and support Point of Sale (POS) systems for retail operations.</li>
+    <li>Support cloud platforms such as AWS, Azure, and Google Cloud.</li>
+    <li>Ensure seamless operation of servers, networks, and hardware across all locations.</li>
+    <li>Conduct stock evaluation and inventory counting for efficient stock management.</li>
+    <li>Oversee comprehensive inventory management for all stock categories.</li>
+    <li>Design and execute digital marketing campaigns using Netcore for newsletters and promotional emails.</li>
+    <li>Manage e-commerce store backend, including uploading product offers, images, and descriptions for seamless online retail operations.</li>
+</ul>
 
                     </div>
                 </div>
