--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
             <div class="skill"><i class="fa-brands fa-wordpress" style="color:#21759b;"></i>
                 <p>WordPress</p>
             </div>
+            <div class="skill"><i class="fa-brands fa-magento" style="color:#21759b;"></i>
+                <p>Magento</p>
+            </div>
             <div class="skill"><i class="fa-brands fa-php" style="color:#777bb4;"></i>
                 <p>PHP</p>
             </div>
